fixed horizontal scrolling in mobile

--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
+    overflow-x: hidden;
+    position: relative;
     margin: 0;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
